# ccache

./: .appveyor.yml  .clang-format  .clang-tidy  .clangd  .cmake-format  .cvsignore  .dockerignore  .editorconfig  .git-blame-ignore-revs  .gitignore  .mailmap  .travis.sh  .travis.yml  ARCHITECTURE.md  AUTHORS.txt  CMakeLists.txt  CMakeSettings.json  CONTRIBUTING.md  COPYING  Dockerfile  GPL-3.0.txt  HACKING.txt  INSTALL  INSTALL-from-release-archive.md  INSTALL.md  INSTALL.txt  LICENSE.adoc  LICENSE.txt  MANUAL.txt  Makefile  Makefile.in  NEWS  NEWS.txt  README  README.md  README.txt  appveyor.yml  args.c  autogen.sh  ccache.1  (+76 more)
benchmark/: CMakeLists.txt  benchmark_hashutil.cpp  main.cpp
doc/: AUTHORS.adoc  AUTHORS.txt  CMakeLists.txt  DEVELOPER.md  INSTALL-from-release-archive.md  INSTALL.md  MANUAL.adoc  MANUAL.txt  NEWS.adoc  NEWS.txt  REMOTE_STORAGE.md  authors.adoc  ccache-doc.css  install.md  manual.adoc  news.adoc  remote_storage_helper_spec.md  unify_mode.tex
doc/scripts/: generate-html  generate-manpage  generate-markdown
src/: .clang-tidy  Arg.cpp  Arg.hpp  Args.cpp  Args.hpp  ArgsInfo.cpp  ArgsInfo.hpp  AtomicFile.cpp  AtomicFile.hpp  CMakeLists.txt  CacheEntryReader.cpp  CacheEntryReader.hpp  CacheEntryWriter.cpp  CacheEntryWriter.hpp  CacheFile.cpp  CacheFile.hpp  Checksum.hpp  Compression.cpp  Compression.hpp  Compressor.cpp  Compressor.hpp  Config.cpp  Config.hpp  Context.cpp  Context.hpp  Counters.cpp  Counters.hpp  Decompressor.cpp  Decompressor.hpp  Depfile.cpp  Depfile.hpp  Digest.hpp  Error.hpp  Fd.cpp  Fd.hpp  File.hpp  FileInfo.cpp  FileInfo.hpp  Finalizer.hpp  FormatNonstdStringView.hpp  (+195 more)
src/ccache/: .clang-tidy  Args.cpp  Args.hpp  ArgsInfo.hpp  CMakeLists.txt  Config.cpp  Config.hpp  Context.cpp  Context.hpp  Depfile.cpp  Depfile.hpp  Hash.cpp  Hash.hpp  InodeCache.cpp  InodeCache.hpp  ProgressBar.cpp  SignalHandler.cpp  Util.cpp  Util.hpp  argprocessing.cpp  argprocessing.hpp  args.cpp  args.hpp  argsinfo.hpp  ccache.cpp  ccache.hpp  compiler.cpp  compiler.hpp  compopt.cpp  compopt.hpp  config.cpp  config.hpp  context.cpp  context.hpp  cxx_modules.cpp  cxx_modules.hpp  depfile.cpp  depfile.hpp  execute.cpp  execute.hpp  (+17 more)
src/ccache/compiler/: CMakeLists.txt  clang.cpp  (+7 more)
src/compression/: CMakeLists.txt  Compressor.cpp  Compressor.hpp  Decompressor.cpp  Decompressor.hpp  NullCompressor.cpp  NullCompressor.hpp  NullDecompressor.cpp  NullDecompressor.hpp  ZstdCompressor.cpp  ZstdCompressor.hpp  ZstdDecompressor.cpp  ZstdDecompressor.hpp  types.cpp  types.hpp
src/core/: AtomicFile.cpp  AtomicFile.hpp  CMakeLists.txt  CacheEntry.cpp  CacheEntry.hpp  CacheEntryDataReader.hpp  CacheEntryDataWriter.hpp  CacheEntryHeader.cpp  CacheEntryHeader.hpp  CacheEntryReader.cpp  CacheEntryReader.hpp  CacheEntryWriter.cpp  CacheEntryWriter.hpp  ChecksummingReader.hpp  ChecksummingWriter.hpp  FileReader.hpp  FileRecompressor.cpp  FileRecompressor.hpp  FileWriter.hpp  Manifest.cpp  Manifest.hpp  MsvcShowIncludesOutput.cpp  MsvcShowIncludesOutput.hpp  Reader.hpp  Result.cpp  Result.hpp  ResultExtractor.cpp  ResultExtractor.hpp  ResultInspector.cpp  ResultInspector.hpp  ResultRetriever.cpp  ResultRetriever.hpp  Serializer.hpp  ShowIncludesParser.cpp  ShowIncludesParser.hpp  Sloppiness.hpp  Statistic.hpp  Statistics.cpp  Statistics.hpp  StatisticsCounters.cpp  (+12 more)
src/lz4/: README  lz4hc.c
src/storage/: CMakeLists.txt  SecondaryStorage.hpp  Storage.cpp  Storage.hpp  types.hpp
src/util/: BitSet.hpp  Bytes.cpp  Bytes.hpp  CMakeLists.txt  DirEntry.cpp  DirEntry.hpp  Duration.hpp  Fd.hpp  FileStream.hpp  Finalizer.hpp  LockFile.cpp  LockFile.hpp  LongLivedLockFileManager.cpp  LongLivedLockFileManager.hpp  MemoryMap.cpp  MemoryMap.hpp  NonCopyable.hpp  PathString.hpp  TemporaryFile.cpp  TemporaryFile.hpp  TextTable.cpp  TextTable.hpp  ThreadPool.hpp  TimePoint.cpp  TimePoint.hpp  Tokenizer.cpp  Tokenizer.hpp  UmaskScope.cpp  XXH3_128.hpp  XXH3_64.hpp  assertions.cpp  assertions.hpp  conversion.hpp  environment.cpp  environment.hpp  error.cpp  error.hpp  expected.hpp  file.cpp  file.hpp  (+23 more)
src/zlib/: README  zutil.h
src/zstd/: README  zstd_zlibwrapper.c  zstd_zlibwrapper.h
test/: CMakeLists.txt  framework.c  framework.h  http-client  http-server  main.c  run  test_args.c  test_argument_processing.c  test_compopt.c  test_conf.c  test_counters.c  test_hash.c  test_hashutil.c  test_lockfile.c  test_stats.c  test_util.c  util.c  util.h
test/fake-compilers/: clang-march-native.sh  gcc-march-native-win.sh  gcc-march-native.sh
test/msvc/: conftest.py  test_basic_functionality.py
test/storage/: CMakeLists.txt
test/suites/: base.bash  basedir.bash  cache_levels.bash  cctc.bash  clang_cu.bash  clang_cu_alias.bash  clang_cu_direct.bash  clang_cu_nocpp2.bash  clang_modules.bash  cleanup.bash  color_diagnostics.bash  compile_command.bash  compression.bash  config.bash  coverage_compilation_dir.bash  coverage_prefix_map.bash  cpp1.bash  ctc.bash  cxx_modules.bash  debug_compilation_dir.bash  debug_prefix_map.bash  depend.bash  depend_different_headers.bash  direct.bash  direct_gcc.bash  distributed_thinlto_clang.bash  embed.bash  fileclone.bash  hardlink.bash  inode_cache.bash  input_charset.bash  ivfsoverlay.bash  l0_cache.bash  masquerading.bash  memcached.bash  memcached_only.bash  memcached_socket.bash  minimize_whitespace.bash  modules.bash  multi_arch.bash  (+50 more)
unittest/: .clang-tidy  CMakeLists.txt  TestUtil.cpp  TestUtil.hpp  catch2_tests.cpp  catch2_tests.hpp  framework.c  framework.cpp  framework.h  framework.hpp  main.c  main.cpp  meson.build  test_Arg.cpp  test_Args.cpp  test_AtomicFile.cpp  test_Checksum.cpp  test_Compression.cpp  test_Config.cpp  test_Config.hpp  test_Counters.cpp  test_Depfile.cpp  test_FormatNonstdStringView.cpp  test_Hash.cpp  test_InodeCache.cpp  test_Lockfile.cpp  test_NullCompression.cpp  test_ScopeGuard.cpp  test_Stat.cpp  test_Statistics.cpp  test_Util.cpp  test_Win32Util.cpp  test_ZstdCompression.cpp  test_argprocessing.cpp  test_args.c  test_args.cpp  test_argument_processing.c  test_argument_processing.cpp  test_bsdmkstemp.cpp  test_ccache.cpp  (+93 more)
(+513 files in other folders)
